--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>portai</title>
-    <link rel="stylesheet" href="assets/demo.css">
     <link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
   
     <script>
@@ -73,7 +72,7 @@
     </div>
     <div class="demo-frame">
       <div class="demo-container">
-        <img id="img" src="assets/face.jpg" />
+        <img id="img" src="assets/faces.jpg" />
       </div>
     </div>
     
