--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         top: -1000px;
       }
       #img {
-		margin-top: 80px;
-        height: 80vh;
+	margin-top: 80px;
+	width: 90%;
         box-shadow: 0px 0px 10px #888888;
       }
     </style>
