--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         text-align: center;
       }
       .demo-title {
-        position: absolute;
         width: 100%;
         background: #2e2f33;
         z-index: 2;
@@ -98,6 +97,7 @@
         width: 90%;
         font-size: .875rem;
         outline: none;
+        margin-top: 10px;
       }
     </style>
   </head>
@@ -105,10 +105,11 @@
     <div class="demo-title">
       <span style="font-size: 30px; color: #fff;">port<span style="color: #f92673">ai</span></span>
     </div>
-    <div class="demo-frame">
+    <div id="frscreen" class="demo-frame">
       <div class="demo-container">
         <img style="display: none;" id="img" /><br>
-        <button onclick="gtd()">new avatar</button>
+        <button onclick="gtd()">new avatar</button><br>
+        <button onclick="ltd()">load avatar</button>
       </div>
     </div>
     
